--- a/style.css
+++ b/style.css
@@ -12,13 +12,41 @@
     width: 400px;
     background-color: aliceblue;
 }
-#switch{
-    margin-top: 10px;
-
+#buttons{
 }
 
 
+.button{
+	color: #313131;
+	font-size: 10px;
+	font-weight: 600;
+	line-height: 1.5;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	font-family: 'Raleway', sans-serif;
+	text-decoration: none;
+	display: inline-block;
+    width: 80px;
+	height: 30px;
+	line-height: 30px;
+    position:relative;
+    
+}
+#search {
+    top:30px;
+    margin-left:10px;
+}
+
+#copy{
+    margin-right:10px;
+}
+
+#switch{
+    margin-top: 10px;
+}
+
 body {
+    
   color: #313131;
   font-size: 10px;
   font-weight: 600;
@@ -34,6 +62,7 @@ a {
 }
 
 .btn {
+    
   height: 40px;
   line-height: 40px;
   text-align: center;
@@ -54,6 +83,7 @@ a {
 
 .flip-front, 
 .flip-back {
+    
     position: absolute;
     left: 0;
     top: 0;
@@ -67,6 +97,7 @@ a {
 }
 
 .flip-front {
+    
     color: #313131;
     border: 2px solid #313131;
     background-color: transparent;
@@ -87,6 +118,7 @@ a {
 }
 
 .btn:hover .flip-front {
+    
     -webkit-transform: rotateX(-90deg) translateZ(25px);
     -ms-transform: rotateX(-90deg) translateZ(25px);
     -o-transform: rotateX(-90deg) translateZ(25px);
